@@ -1860,4 +1860,5 @@ fore clipping plane rather than viewpoint.  Thanks to Peter A-B for
 pointing this out.
 
 Added options to dctimestep to allow multiple time steps (-n)
-and multiple output pictures or sensor files (-o).
+and multiple output pictures or sensor files (-o).  Also added -i
+option to specify float (-if) or double (-id) input for sky matrix.
